# MeasurementAndControl_Qt

./: readme.md
ChartConfig/: ChartConfig.pri  ChartConfig.pro  Makefile  Makefile.Debug  Makefile.Release  chartconfig.cpp  chartconfig.h  chartconfig.ui  main.cpp  qwdialogpen.h  qwdialogpen.ui  ui_qwdialogpen.h
DllRead/: DllRead.pro  Makefile  Makefile.Debug  Makefile.Release  USBDAQ8API.h  dllread.cpp  dllread.h  dllread.ui  dllreadread.pri  main.cpp  object_script.DllRead.Debug  object_script.DllRead.Release  object_script.chartconfig.Debug  object_script.chartconfig.Release  ui_chartconfig.h  ui_dllread.h  直接解压到当前文件夹.rar
gause/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  gause.cpp  gause.h  gause.pro  gause.ui  main.cpp  ui_gause.h
qcustomcontrols/: qcustomcontrols.pri
serialwidget/: Makefile  Makefile.Debug  Makefile.Release  main.cpp  object_script.SerialPort.Debug  object_script.SerialPort.Release  pid.cpp  pid.h  serial_qc - 副本.qrc  serial_qc.qrc  serialwidget.cpp  serialwidget.h  serialwidget.pri  serialwidget.pro  serialwidget.ui  ui_serialwidget.h
simulinkmotor/: CMakeLists.txt  ert_main.cpp  main.cpp  motor.cpp  motor.h  motor.pri  motor_private.h  motor_types.h  rtw_main.cpp  rtwtypes.h  serialwidget.pri
simulinkpid/: CMakeLists.txt  ert_main.cpp  main.cpp  pidmodel.cpp  pidmodel.h  pidmodel_private.h  pidmodel_types.h  rtwtypes.h  simulinkpid.pri  simulinkpid.rar
simulinkpid_nofliter/: CMakeLists.txt  ert_main.cpp  main.cpp  pidmodel.cpp  pidmodel.h  pidmodel_private.h  pidmodel_types.h  rtwtypes.h  simulinkpid_nofliter.pri  (+1 more)
(+41 files in other folders)
